--- a/view/mainview.phtml
+++ b/view/mainview.phtml
@@ -10,13 +10,13 @@ global $URL_PATH;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-    <?php \dawfony\Ti::startBlock("title"); ?>
+        <?php \dawfony\Ti::startBlock("title"); ?>
         SocialDaw
-    <?php \dawfony\Ti::endBlock(); ?>
+        <?php \dawfony\Ti::endBlock(); ?>
     </title>
-    <!-- Bootstrap. Las rutas deben ser absolutas, porque estamos haciendo rewrite -->
-    <link rel="stylesheet" href="<?=$URL_PATH?>/vendor/twbs/bootstrap/dist/css/bootstrap.css">
-    <script src="<?=$URL_PATH?>/vendor/twbs/bootstrap/dist/js/bootstrap.js"></script>
+    <?php /* Bootstrap. Las rutas deben ser absolutas, porque estamos haciendo rewrite */ ?>
+    <link rel="stylesheet" href="<?= $URL_PATH ?>/vendor/twbs/bootstrap/dist/css/bootstrap.css">
+    <script src="<?= $URL_PATH ?>/vendor/twbs/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 
 <body class="container">
