--- a/view/formregistro.phtml
+++ b/view/formregistro.phtml
@@ -36,7 +36,7 @@ global $URL_PATH; // Necesitamos la trayectoria de la URL a la app
         </div>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary offset-md-2">Submit</button>
+        <button type="submit" class="btn btn-primary offset-md-2">Registrarse!</button>
     </div>
 </form>
 <?php
