formulario de inserción

--- a/view/mainview.phtml
+++ b/view/mainview.phtml
@@ -17,6 +17,9 @@ global $URL_PATH;
     <?php /* Bootstrap. Las rutas deben ser absolutas, porque estamos haciendo rewrite */ ?>
     <link rel="stylesheet" href="<?= $URL_PATH ?>/vendor/twbs/bootstrap/dist/css/bootstrap.css">
     <script src="<?= $URL_PATH ?>/vendor/twbs/bootstrap/dist/js/bootstrap.js"></script>
+    <?php /* Font awesome */ ?>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <?php /* Javascript de este proyecto */ ?>
     <script src="<?= $URL_PATH ?>/js/main.js"></script>
     <script>
         var URL_PATH="<?= $URL_PATH ?>"; // Pasamos el URL_PATH de php a Javascript.
