--- a/view/botoninsertar.phtml
+++ b/view/botoninsertar.phtml
@@ -1,3 +1,3 @@
 <div style="position:fixed;bottom:40px;right:40px;z-index:1">
-    <a href="<?=$URL_PATH?>/post/new" class="button btn-success btn-lg rounded-circle">+</a>
+    <a href="<?=$URL_PATH?>/post/new" class="button btn-success btn-lg rounded-circle"><i class="fa fa-pencil"></i></a>
 </div>
