--- a/view/listado.phtml
+++ b/view/listado.phtml
@@ -1,26 +1,32 @@
-<?php 
+<?php
 global $URL_PATH;
 \dawfony\Ti::extend("view/mainview.phtml");
 \dawfony\Ti::startBlock("content");
 ?>
-<?php foreach($posts as $post): ?>
-<div class="row border border-secondary rounded ml-0 mr-0 mt-1">
-    <div class="col-sm-2">
-        <img class="img-fluid rounded" src="<?=$post->foto?>" alt="Imagen: <?=$post->resumen?>">
+<?php foreach ($posts as $post) : ?>
+    <div class="row border border-secondary rounded ml-0 mr-0 mt-1">
+        <div class="col-sm-2">
+            <img class="img-fluid rounded" src="<?= $URL_PATH ?>/assets/foto/<?= $post->foto ?>" alt="Imagen: <?= $post->resumen ?>">
+        </div>
+        <div class="col-sm-7">
+            <h4><?= $post->resumen ?></h4>
+            <div class="row">
+                <div class="col-sm-6"><a href="<?= $URL_PATH ?>/post/<?= $post->id ?>" class="btn btn-outline-primary btn-sm">Leer más</a></div>
+                <div class="offset-sm-1 col-sm-5">
+                    <i class="fa fa-heart"></i> <?= $post->numLikes ?>
+                    <i class="fa fa-comments"></i> <?= $post->numComments ?>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3 ">
+            <h5>Por <a href="<?= $URL_PATH ?>/perfil/<?= $post->usuario_login ?>"><?= $post->usuario_login ?></a></h5>
+            <h5>en <?= $post->categoria ?></h5>
+            <h6>en <?= $post->fecha ?></h6>
+        </div>
     </div>
-    <div class="col-sm-7">
-        <h4><?=$post->resumen?>"</h4>
-        <a href="<?=$URL_PATH?>/post/<?=$post->id?>" class="btn btn-primary btn-outline">Leer más</a>
-    </div>
-    <div class="col-sm-3 ">
-        <h5>Por <a href="<?=$URL_PATH?>/perfil/<?=$post->usuario_login?>"><?=$post->usuario_login?></a></h5>
-        <h5>en <?=$post->categoria?></h5>
-        <h6>en <?=$post->fecha?></h6>
-    </div>
-</div>
 <?php endforeach; ?>
-<?php require "view/botoninsertar.phtml"?>
+<?php require "view/botoninsertar.phtml" ?>
 <?php
-    \dawfony\Ti::endBlock();
-    \dawfony\Ti::endExtend();
+\dawfony\Ti::endBlock();
+\dawfony\Ti::endExtend();
 ?>
