--- a/view/formlogin.phtml
+++ b/view/formlogin.phtml
@@ -26,7 +26,7 @@ $login = $login ?? "";
         </div>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary  w-100">Inicial sesion</button>
+        <button type="submit" class="btn btn-primary  w-100">Iniciar sesion</button>
     </div>
 </form>
 <?php
