--- a/view/mainview.phtml
+++ b/view/mainview.phtml
@@ -14,10 +14,15 @@ global $URL_PATH;
         SocialDaw
         <?php \dawfony\Ti::endBlock(); ?>
     </title>
+    <?php /* jquery cdn */ ?>
+    <script
+			  src="https://code.jquery.com/jquery-3.4.1.js"
+			  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+			  crossorigin="anonymous"></script>
     <?php /* Bootstrap. Las rutas deben ser absolutas, porque estamos haciendo rewrite */ ?>
     <link rel="stylesheet" href="<?= $URL_PATH ?>/vendor/twbs/bootstrap/dist/css/bootstrap.css">
     <script src="<?= $URL_PATH ?>/vendor/twbs/bootstrap/dist/js/bootstrap.js"></script>
-    <?php /* Font awesome */ ?>
+    <?php /* Font awesome CDN */ ?>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <?php /* Javascript de este proyecto */ ?>
     <script src="<?= $URL_PATH ?>/js/main.js"></script>
@@ -27,6 +32,13 @@ global $URL_PATH;
     <?php /*Para añadir lineas al head desde las plantillas derivadas*/ ?>
     <?php \dawfony\Ti::startBlock("head"); ?>
     <?php \dawfony\Ti::endBlock(); ?>
+
+    <style>
+    <?php /*Para añadir lineas al css interno desde las plantillas derivadas*/ ?>
+    <?php \dawfony\Ti::startBlock("style"); ?>
+    <?php \dawfony\Ti::endBlock(); ?>
+    </style>
+
 </head>
 
 <body class="container">
@@ -41,7 +53,7 @@ global $URL_PATH;
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href=".">Lo último</a>
+        <a class="navbar-brand" href="<?= $URL_PATH ?>/">Lo último</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,17 +63,17 @@ global $URL_PATH;
                 
                 <?php if (!isset($_SESSION["login"])): // no hay usuario logueado?>
                 <li class="nav-item">
-                    <a class="nav-link" href="registro">Registro</a>
+                    <a class="nav-link" href="<?= $URL_PATH ?>/registro">Registro</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login">Login</a>
+                    <a class="nav-link" href="<?= $URL_PATH ?>/login">Login</a>
                 </li>
                 <?php else: // si hay usuario logueado?>
                 <li class="nav-item">
-                    <a class="nav-link" href="siguiendo">Siguiendo</a>
+                    <a class="nav-link" href="<?= $URL_PATH ?>/siguiendo">Siguiendo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="perfil">Tu perfil</a>
+                    <a class="nav-link" href="<?= $URL_PATH ?>/perfil/<?= $_SESSION["login"] ?>">Tu perfil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="confirmarLogout()">Cerrar sesión</a>
