--- a/view/post.phtml
+++ b/view/post.phtml
@@ -2,6 +2,13 @@
 global $URL_PATH;
 \dawfony\Ti::extend("view/mainview.phtml");
 \dawfony\Ti::startBlock("content");
+function convertYoutube($string) {
+	return preg_replace(
+		"/\s*[a-zA-Z\/\/:\.]*youtu(be.com\/watch\?v=|.be\/)([a-zA-Z0-9\-_]+)([a-zA-Z0-9\/\*\-\_\?\&\;\%\=\.]*)/i",
+		"<iframe width=\"420\" height=\"315\" src=\"//www.youtube.com/embed/$2\" allowfullscreen></iframe>",
+		$string
+	);
+}
 ?>
 
 <div class="row m-2">
@@ -22,7 +29,7 @@ global $URL_PATH;
     </div>
 </div>
 <div class="container">
-    <?= $post->texto ?>
+    <?= convertYoutube($post->texto) ?>
 </div>
 <?php
 \dawfony\Ti::endBlock();
