Click en like. Inicio de api

--- a/view/post.phtml
+++ b/view/post.phtml
@@ -31,6 +31,7 @@ function convertYoutube($string) {
 <div class="container">
     <?= convertYoutube($post->texto) ?>
 </div>
+<script src="<?=$URL_PATH?>/js/like.js"></script>
 <?php
 \dawfony\Ti::endBlock();
 \dawfony\Ti::endExtend();
