--- a/view/listado.phtml
+++ b/view/listado.phtml
@@ -12,16 +12,30 @@ global $URL_PATH;
             <h4><?= $post->resumen ?></h4>
             <div class="row">
                 <div class="col-sm-6"><a href="<?= $URL_PATH ?>/post/<?= $post->id ?>" class="btn btn-outline-primary btn-sm">Leer más</a></div>
+                
                 <div class="offset-sm-1 col-sm-5">
-                    <i class="fa fa-heart<?=($post->like?" text-danger":"")?>"></i> <?= $post->numLikes ?>
+                    <?php /*Pasamos el id del post al evento de javascript. Enlace solo si usuario logueado*/?>
+                    <?php if (isset($_SESSION["login"])): ?>
+                    <a href="javascript:void(0)" onclick="likeClicked(<?= $post->id ?>)">
+                    <?php endif ?>
+                        <?php /* El atributo id del elemento del corazón tiene como sufijo el id del post */?>
+                        <i id="likecorazon<?= $post->id ?>" class="fa fa-heart<?= ($post->like ? " text-danger" : "") ?>"></i>
+                    <?php if (isset($_SESSION["login"])): ?>                        
+                    </a>
+                    <?php endif ?>
+                    <?php /* Lo mismo para el elemento que contiene la cuenta de likes:
+                             su atributo id contiene como sufijo el id del post */?>
+                    <span id="likecontador<?= $post->id ?>">
+                        <?= $post->numLikes ?>
+                    </span>
                     <i class="fa fa-comments"></i> <?= $post->numComments ?>
                 </div>
             </div>
         </div>
         <div class="col-sm-3 ">
             <h5>
-            Por <a href="<?= $URL_PATH ?>/perfil/<?= $post->usuario_login ?>"><?= $post->usuario_login ?></a>
-            <img class="img-fluid rounded" src="https://avatars.dicebear.com/v2/gridy/<?= $post->usuario_login ?>.svg?options[width]=32&options[height]=32" alt="avatar: <?= $post->usuario_login ?>">
+                Por <a href="<?= $URL_PATH ?>/perfil/<?= $post->usuario_login ?>"><?= $post->usuario_login ?></a>
+                <img class="img-fluid rounded" src="https://avatars.dicebear.com/v2/gridy/<?= $post->usuario_login ?>.svg?options[width]=32&options[height]=32" alt="avatar: <?= $post->usuario_login ?>">
             </h5>
             <h5>en <?= $post->categoria ?></h5>
             <h6>el <?= $post->fecha ?></h6>
@@ -33,6 +47,7 @@ if (isset($_SESSION["rol_id"])) {
     require "view/botoninsertar.phtml";
 }
 ?>
+<script src="<?=$URL_PATH?>/js/like.js"></script>
 <?php
 \dawfony\Ti::endBlock();
 \dawfony\Ti::endExtend();
