--- a/view/post.phtml
+++ b/view/post.phtml
@@ -2,12 +2,13 @@
 global $URL_PATH;
 \dawfony\Ti::extend("view/mainview.phtml");
 \dawfony\Ti::startBlock("content");
-function convertYoutube($string) {
-	return preg_replace(
-		"/\s*[a-zA-Z\/\/:\.]*youtu(be.com\/watch\?v=|.be\/)([a-zA-Z0-9\-_]+)([a-zA-Z0-9\/\*\-\_\?\&\;\%\=\.]*)/i",
-		"<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/$2' frameborder='0' allowfullscreen></iframe></div>",
-		$string
-	);
+function convertYoutube($string)
+{
+    return preg_replace(
+        "/\s*[a-zA-Z\/\/:\.]*youtu(be.com\/watch\?v=|.be\/)([a-zA-Z0-9\-_]+)([a-zA-Z0-9\/\*\-\_\?\&\;\%\=\.]*)/i",
+        "<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/$2' frameborder='0' allowfullscreen></iframe></div>",
+        $string
+    );
 }
 ?>
 
@@ -31,7 +32,21 @@ function convertYoutube($string) {
 <div class="container">
     <?= convertYoutube($post->texto) ?>
 </div>
-<script src="<?=$URL_PATH?>/js/like.js"></script>
+<hr>
+<h4 id="comentarios">Comentarios</h4>
+<form method="POST" action="<?= $URL_PATH ?>/comentario/new">
+    <div class="form-group row">
+        <div class="col-sm-8">
+            <input type="hidden" name="postid" value="<?= $post->id ?>">
+            <textarea placeholder="Texto completo" class="form-control" rows="2" name="texto" id="texto"></textarea>
+        </div>
+        <div class="col-sm-4">
+            <button type="submit" class="btn btn-success">Comentar</button>
+        </div>
+    </div>
+</form>
+
+<script src="<?= $URL_PATH ?>/js/like.js"></script>
 <?php
 \dawfony\Ti::endBlock();
 \dawfony\Ti::endExtend();
