--- a/view/mainview.phtml
+++ b/view/mainview.phtml
@@ -24,6 +24,8 @@ global $URL_PATH;
     <script src="<?= $URL_PATH ?>/vendor/twbs/bootstrap/dist/js/bootstrap.js"></script>
     <?php /* Font awesome CDN */ ?>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <?php /* Animate.css CDN */ ?>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <?php /* Javascript de este proyecto */ ?>
     <script src="<?= $URL_PATH ?>/js/main.js"></script>
     <script>
