--- a/view/post.phtml
+++ b/view/post.phtml
@@ -18,10 +18,21 @@ function convertYoutube($string)
     </div>
     <div class="col-7">
         <h4><?= $post->resumen ?></h4>
-        <div>
-            <i class="fa fa-heart"></i> <?= $post->numLikes ?>
-            <i class="fa fa-comments"></i> <?= $post->numComments ?>
-        </div>
+        <?php /*Pasamos el id del post al evento de javascript. Enlace solo si usuario logueado*/ ?>
+        <?php if (isset($_SESSION["login"])) : ?>
+            <a href="javascript:void(0)" onclick="likeClicked(<?= $post->id ?>)">
+            <?php endif ?>
+            <?php /* El atributo id del elemento del corazón tiene como sufijo el id del post */ ?>
+            <i id="likecorazon<?= $post->id ?>" class="fa fa-heart<?= ($post->like ? " text-danger" : "") ?>"></i>
+            <?php if (isset($_SESSION["login"])) : ?>
+            </a>
+        <?php endif ?>
+        <?php /* Lo mismo para el elemento que contiene la cuenta de likes:
+                             su atributo id contiene como sufijo el id del post */ ?>
+        <span id="likecontador<?= $post->id ?>">
+            <?= $post->numLikes ?>
+        </span>
+        <a href="#comentarios"><i class="fa fa-comments"></i> <?= $post->numComments ?></a>
         <div>
             Por <a href="<?= $URL_PATH ?>/perfil/<?= $post->usuario_login ?>"><?= $post->usuario_login ?></a>
             en <em><?= $post->categoria ?></em>
@@ -33,19 +44,28 @@ function convertYoutube($string)
     <?= convertYoutube($post->texto) ?>
 </div>
 <hr>
+<?php $placeholder = ($post->numComments == 0 ? "Sé el primero en comentar" : "Escribe aquí tu comentario") ?>
 <h4 id="comentarios">Comentarios</h4>
-<form method="POST" action="<?= $URL_PATH ?>/comentario/new">
+<form method="POST" action="<?= $URL_PATH ?>/post/<?= $post->id ?>/comentario/new">
     <div class="form-group row">
         <div class="col-sm-8">
-            <input type="hidden" name="postid" value="<?= $post->id ?>">
-            <textarea placeholder="Texto completo" class="form-control" rows="2" name="texto" id="texto"></textarea>
+            <textarea placeholder="<?= $placeholder ?>" class="form-control" rows="2" name="texto" id="texto"></textarea>
         </div>
         <div class="col-sm-4">
             <button type="submit" class="btn btn-success">Comentar</button>
         </div>
     </div>
 </form>
-
+<?php foreach ($post->comentarios as $comentario) : ?>
+    <div class="row border-top border-rounded">
+        <div class="col-sm-8">
+            <?= $comentario->texto ?>
+        </div>
+        <col-sm-4>
+            Por <a href="<?= $URL_PATH ?>/perfil/<?= $post->usuario_login ?>"><?= $comentario->usuario_login ?></a> el <?= $comentario->fecha ?>
+        </col-sm-4>
+    </div>
+<?php endforeach; ?>
 <script src="<?= $URL_PATH ?>/js/like.js"></script>
 <?php
 \dawfony\Ti::endBlock();
