--- a/view/post.phtml
+++ b/view/post.phtml
@@ -44,9 +44,9 @@ function convertYoutube($string)
     <?= convertYoutube($post->texto) ?>
 </div>
 <hr>
+<h4 id="comentarios">Comentarios:</h4>
 <?php if (isset($_SESSION["login"])) : ?>
     <?php $placeholder = ($post->numComments == 0 ? "Sé el primero en comentar" : "Escribe aquí tu comentario") ?>
-    <h4 id="comentarios">Comentarios</h4>
     <form method="POST" action="<?= $URL_PATH ?>/post/<?= $post->id ?>/comentario/new">
         <div class="form-group row">
             <div class="col-sm-8">
@@ -59,7 +59,7 @@ function convertYoutube($string)
     </form>
 <?php else : ?>
     <div class="alert alert-info">
-        Inicia sesión para comentar
+        Inicia sesión para <?= $post->numComments == 0 ? "ser el primero en comentar." : "dejar tu comentario"?>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
