--- a/view/listado.phtml
+++ b/view/listado.phtml
@@ -3,6 +3,8 @@ global $URL_PATH;
 \dawfony\Ti::extend("view/mainview.phtml");
 \dawfony\Ti::startBlock("content");
 ?>
+<h1><?= $titulo ?></h1>
+<h2><?= $subtitulo ?></h2>
 <?php foreach ($posts as $post) : ?>
     <div class="row border border-secondary rounded ml-0 mr-0 mt-1">
         <div class="col-sm-4 p-1">
@@ -12,19 +14,19 @@ global $URL_PATH;
             <h4><?= $post->resumen ?></h4>
             <div class="row">
                 <div class="col-sm-6"><a href="<?= $URL_PATH ?>/post/<?= $post->id ?>" class="btn btn-outline-primary btn-sm">Leer más</a></div>
-                
+
                 <div class="offset-sm-1 col-sm-5 mb-3">
-                    <?php /*Pasamos el id del post al evento de javascript. Enlace solo si usuario logueado*/?>
-                    <?php if (isset($_SESSION["login"])): ?>
-                    <a href="javascript:void(0)" onclick="likeClicked(<?= $post->id ?>)">
-                    <?php endif ?>
-                        <?php /* El atributo id del elemento del corazón tiene como sufijo el id del post */?>
+                    <?php /*Pasamos el id del post al evento de javascript. Enlace solo si usuario logueado*/ ?>
+                    <?php if (isset($_SESSION["login"])) : ?>
+                        <a href="javascript:void(0)" onclick="likeClicked(<?= $post->id ?>)">
+                        <?php endif ?>
+                        <?php /* El atributo id del elemento del corazón tiene como sufijo el id del post */ ?>
                         <i id="likecorazon<?= $post->id ?>" class="fa fa-heart<?= ($post->like ? " text-danger" : "") ?>"></i>
-                    <?php if (isset($_SESSION["login"])): ?>                        
-                    </a>
+                        <?php if (isset($_SESSION["login"])) : ?>
+                        </a>
                     <?php endif ?>
                     <?php /* Lo mismo para el elemento que contiene la cuenta de likes:
-                             su atributo id contiene como sufijo el id del post */?>
+                             su atributo id contiene como sufijo el id del post */ ?>
                     <span id="likecontador<?= $post->id ?>">
                         <?= $post->numLikes ?>
                     </span>
@@ -42,12 +44,28 @@ global $URL_PATH;
         </div>
     </div>
 <?php endforeach; ?>
+
+<?php /* Paginación simple. Solo página anterior y siguiente */ ?>
+<nav aria-label="Page navigation" class="mt-2">
+    <ul class="pagination justify-content-end">
+        <li class="page-item<?=($pagina - 1 < 1 ? " disabled":"")?>">
+            <a class="page-link" href="<?= $ruta . ($pagina - 1) ?>" tabindex="-1">Anterior</a>
+        </li>
+        <li class="page-item disabled">
+        <a class="page-link" href="#"><?= $pagina ?></a>
+    </li>
+        <li class="page-item<?=($pagina + 1 > $numpaginas ? " disabled":"")?>" >
+            <a class="page-link" href="<?= $ruta . ($pagina + 1) ?>">Siguiente</a>
+        </li>
+    </ul>
+</nav>
+
 <?php
 if (isset($_SESSION["rol_id"])) {
     require "view/botoninsertar.phtml";
 }
 ?>
-<script src="<?=$URL_PATH?>/js/like.js"></script>
+<script src="<?= $URL_PATH ?>/js/like.js"></script>
 <?php
 \dawfony\Ti::endBlock();
 \dawfony\Ti::endExtend();
