seguir y dejar de seguir

--- a/view/mainview.phtml
+++ b/view/mainview.phtml
@@ -8,7 +8,7 @@ global $URL_PATH;
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="noindex,nofollow">
     <title>
         <?php \dawfony\Ti::startBlock("title"); ?>
         SocialDaw
@@ -51,6 +51,7 @@ global $URL_PATH;
             <img class="img-fluid w-60" src="<?= $URL_PATH ?>/assets/logo.png" alt="sociadaw logo">
             <br>
             <h3><em>Tu red de anime, jpop y kpop</em></h3>
+            <h6 class="text-danger bg-light">(AVISO: Este sitio es un ejercicio de programación, y no una red social operativa)</h6>
         </div> 
 
             
