--- a/view/formregistro.phtml
+++ b/view/formregistro.phtml
@@ -4,35 +4,37 @@ global $URL_PATH; // Necesitamos la trayectoria de la URL a la app
 \dawfony\Ti::startBlock("content");
 ?>
 <?php /* El action es una ruta. Necesita el URL_PATH */?>
-<form class="mt-4" action="<?=$URL_PATH?>/registro" method="POST">
+<form class="mt-4" action="<?=$URL_PATH?>/registro" method="POST" onsubmit="">
     <div class="form-group row">
         <label for="login" class="col-md-2 col-form-label">Login</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="login" value="" name="login">
+            <input type="text" class="form-control" id="login" value="" name="login"
+            pattern="[A-Za-z0-9]{1,20}" title="Sólo letras y números" required
+            >
         </div>
     </div>
     <div class="form-group row">
         <label for="pass1" class="col-md-2 col-form-label">contraseña: </label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="pass1" value="" name="password">
+            <input type="password" class="form-control" id="pass1" value="" name="password" required>
         </div>
     </div>
     <div class="form-group row">
         <label for="pass2" class="col-md-2 col-form-label">repite: </label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="pass2" value="">
+            <input type="password" class="form-control" id="pass2" value="" required>
         </div>
     </div>
     <div class="form-group row">
         <label for="nombre" class="col-md-2 col-form-label">nombre</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="nombre" name="nombre" value="">
+            <input type="text" class="form-control" id="nombre" name="nombre" value="" required>
         </div>
     </div>
     <div class="form-group row">
         <label for="email" class="col-md-2 col-form-label">email</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" name="email" value="">
+            <input type="email" class="form-control" id="email" name="email" value="" required>
         </div>
     </div>
     <div class="form-group">
