--- a/view/formpost.phtml
+++ b/view/formpost.phtml
@@ -20,7 +20,7 @@ global $URL_PATH; // Necesitamos la trayectoria de la URL a la app
 <?php /* El action es una ruta. Necesita el URL_PATH */ ?>
 <form class="mt-4" action="<?= $URL_PATH ?>/post/new" method="POST" enctype="multipart/form-data">
     <div class="form-group">
-        <textarea class="form-control" placeholder="Resumen" rows="2" name="resumen" id="resumen"></textarea>
+        <textarea class="form-control" placeholder="Resumen" rows="2" name="resumen" id="resumen" required autofocus></textarea>
     </div>
     <div class="form-group">
         <textarea placeholder="Texto completo" class="form-control" rows="6" name="texto" id="texto"></textarea>
@@ -36,7 +36,7 @@ global $URL_PATH; // Necesitamos la trayectoria de la URL a la app
         </div>
         <div class="col-sm-6">
             <label for="filefoto">Sube una foto:</label>
-            <input type="file" class="form-control-file" id="filefoto" name="foto">
+            <input type="file" class="form-control-file" id="filefoto" name="foto" pattern=".*\.(jpg|jpeg|gif|png|webp|svg)" required>
         </div>
     </div>
     <div class="form-group">
